--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.3.2",
     "stylelint": "10.1.0",
-    "stylelint-config-htmlacademy": "^0.1.4"
+    "stylelint-config-htmlacademy": "^0.1.4",
+    "svg4everybody": "^2.1.9"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
