--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "posthtml-include": "^1.3.2",
     "stylelint": "10.1.0",
     "stylelint-config-htmlacademy": "^0.1.4",
-    "svg4everybody": "^2.1.9"
+    "svg4everybody": "^2.1.9",
+    "svgxuse": "^1.2.6"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
